# OpenGL_on_SDL

./: CMakeLists.txt  README.md
coloring/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
firstSteps/: CMakeLists.txt  loadShaders.cpp  loadShaders.h  main.cpp  shader.vert
firstsdlwin/: CMakeLists.txt  main.cpp
multipleObjects/: CMakeLists.txt  main.cpp
sdlmixer/: CMakeLists.txt  main.cpp
sdlwinptr/: CMakeLists.txt  main.cpp
shaderLoading/: CMakeLists.txt
texturing/: CMakeLists.txt  bmpLoader.hpp  loadShaders.cpp  loadShaders.hpp  main.cpp  shader.frag  shader.vert
transformations/: CMakeLists.txt  loadShaders.cpp  main.cpp  shader.frag  shader.vert
